--- a/index.html
+++ b/index.html
@@ -3,36 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheets/main.css">
     <title>Hobby Board Gaming</title>
 </head>
-<body>
-    <h1>Hobby Board Gaming!</h1>
-    <article>
-        <h2>What is a Hobby Board Game?</h2>
-        <p>"All of us who are enthusiastic about modern boardgames want to describe in an inspiring way to the unfamiliar what a modern boardgame is. And with limited time this task can be hard: To understand what they already know, to find out what we think they might like in boardgame so we can focus on that, to describe the the width, breadth and depth of the hobby, what to relate it to, what it's not or simply give the mysterious "Come and see"-answer. There should be as many ways to do this as there are human beings, I suppose". Quote from Fridtjof on <a href="https://boardgamegeek.com/geeklist/228617/explaining-what-modern-boardgame" target="_blank">BoardGameGeek.com</a></p>
-    </article>
-    <main>
-        <h2>Three Great Board Games to try!</h2>
+<body onload = "changeImage()">
+    <a class="skip-to-main-content-link skip-to-main-content-link:focus" href="#main_content">Skip to main content</a>
+    <header>
+        <nav>
+            <ul>
+             <li><a href="index.html">Home</a></li>
+             <li><a href="great_games.html">Great Games</a></li>
+             <li><a href="game_pictures.html">Game Pictures</a></li>
+           </ul>
+        </nav>
+
+        <h1>Hobby Board Gaming!</h1>
+    </header>
+    
+    <main id="main_content">
+        <article>
+            <h2>What is a Hobby Board Game?</h2>
+            <p>"All of us who are enthusiastic about modern boardgames want to describe in an inspiring way to the unfamiliar what a modern boardgame is. And with limited time this task can be hard: To understand what they already know, to find out what we think they might like in boardgame so we can focus on that, to describe the the width, breadth and depth of the hobby, what to relate it to, what it's not or simply give the mysterious "Come and see"-answer. There should be as many ways to do this as there are human beings, I suppose". Quote from Fridtjof on <a href="https://boardgamegeek.com/geeklist/228617/explaining-what-modern-boardgame" target="_blank">BoardGameGeek.com</a>.</p>
+            <a id="myAnchor" href="https://boardgamegeek.com/boardgame/342942/ark-nova" target="_blank"><img src="images/ark_nova.jpg" alt="Ark Nova Board Game"></a>
+        </article>
+
+         </main>
+    <footer>
+        <h2>Learn more about board games and buy them!</h2>
         <ul>
-            <li>
-                <figure>
-                    <img src="images/marvel_united.jpg" alt="Box cover for Marvel United" width="250">
-                    <figcaption><a href="https://boardgamegeek.com/boardgame/298047/marvel-united" target="_blank">Marvel United</a></figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/earth.jpg" alt="Box cover for Earth" width="250">
-                    <figcaption><a href="https://boardgamegeek.com/boardgame/350184/earth" target="_blank">Earth</a></figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/cthulhu_dmd.jpg" alt="Box cover for Cthulhu Death May Die" width="250">
-                    <figcaption><a href="https://boardgamegeek.com/boardgame/253344/cthulhu-death-may-die" target="_blank">Cthulhu Death May Die</a></figcaption>
-                </figure>
-            </li>
-        </ul>
-    </main>
+            <li><a href="https://boardgamegeek.com" target="_blank">Boardgame Geek</a></li>
+            <li><a href="https://www.youtube.com/@thedicetower" target="_blank">The Dice Tower YouTube Channel</a></li>
+            <li><a href="https://www.gamenerdz.com" target="_blank"> GameNerdz Board Game Store</a></li>
+        </ul>   
+    </footer>
 </body>
+<script src="js/image_link.js"></script>
 </html>
+
