--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Hobby Board Gaming</title>
 </head>
 <body onload = "changeImage()">
+    <div id="container">
     <a class="skip-to-main-content-link skip-to-main-content-link:focus" href="#main_content">Skip to main content</a>
     <header>
         <nav>
@@ -29,6 +30,7 @@
         </article>
 
          </main>
+        </div>
     <footer>
         <h2>Learn more about board games and buy them!</h2>
         <ul>
