--- a/great_games.html
+++ b/great_games.html
@@ -7,6 +7,7 @@
     <title>Hobby Board Gaming</title>
 </head>
 <body onload = "changeImage()">
+    <div id="container">
     <a class="skip-to-main-content-link skip-to-main-content-link:focus" href="#main_content">Skip to main content</a>
     <header>
         <nav>
@@ -61,5 +62,14 @@
             </li>
         </ul>
     </main>
+        </div>
+    <footer>
+        <h2>Learn more about board games and buy them!</h2>
+        <ul>
+            <li><a href="https://boardgamegeek.com" target="_blank">Boardgame Geek</a></li>
+            <li><a href="https://www.youtube.com/@thedicetower" target="_blank">The Dice Tower YouTube Channel</a></li>
+            <li><a href="https://www.gamenerdz.com" target="_blank"> GameNerdz Board Game Store</a></li>
+        </ul>   
+    </footer>
 </body>
 </html>
