--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
              <li><a href="index.html">Home</a></li>
              <li><a href="great_games.html">Great Games</a></li>
-             <li><a href="game_pictures.html">Game Pictures</a></li>
+             <li><a href="slideshow.html">Game Pictures</a></li>
            </ul>
         </nav>
 
