--- a/slideshow.html
+++ b/slideshow.html
@@ -232,22 +232,22 @@ img.hover-shadow {
 
 <div class="row">
   <div class="column">
-    <img src="images/cthulhu_game_small.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="images/cthulhu_game_small.jpg" alt="Cthulhu Death May Die" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="images/dune_game_small.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="images/dune_game_small.jpg" alt="Dune Imperium Board Game" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="images/earth_game.webp" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="images/earth_game.webp" alt="Earth Board Game" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="images/gizmos_game_small.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+    <img src="images/gizmos_game_small.jpg" alt="Gizmos Board Game" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="images/heat_game_small.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="images/heat_game_small.jpg" alt="Heat Pedal to the Medal Board Game" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="images/marvel_game_small.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="images/marvel_game_small.jpg" alt="Marvel United Board Game" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
   </div>
 </div>
 
@@ -257,32 +257,32 @@ img.hover-shadow {
 
     <div class="mySlides">
       <div class="numbertext">1 / 6</div>
-      <img src="images/cthulhu_game.webp" style="width:100%">
+      <img src="images/cthulhu_game.webp" alt="Cthulhu Death May Die" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 6</div>
-      <img src="images/dune_game.webp" style="width:100%">
+      <img src="images/dune_game.webp" alt="Dune Imperium Board Game" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 6</div>
-      <img src="images/earth_game.webp" style="width:100%">
+      <img src="images/earth_game.webp" alt="Earth Board Game" style="width:100%">
     </div>
     
     <div class="mySlides">
       <div class="numbertext">4 / 6</div>
-      <img src="images/gizmos_game.webp" style="width:100%">
+      <img src="images/gizmos_game.webp" alt="Gizmos Board Game" style="width:100%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">5 / 6</div>
-        <img src="images/heat_game.webp" style="width:100%">
+        <img src="images/heat_game.webp" alt="Heat Pedal to the Medal Board Game" style="width:100%">
       </div>
 
       <div class="mySlides">
         <div class="numbertext">6 / 6</div>
-        <img src="images/marvel_game.webp" style="width:100%">
+        <img src="images/marvel_game.webp" alt="Marvel United Board Game" style="width:100%">
       </div>
     
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
