--- a/index.html
+++ b/index.html
@@ -1,44 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="js/image_link.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheets/main.css">
-    <title>Hobby Board Gaming</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Module 2 Solution</title>
 </head>
-<body onload = "changeImage()">
-    <div id="container">
-    <a class="skip-to-main-content-link skip-to-main-content-link:focus" href="#main_content">Skip to main content</a>
-    <header>
-        <nav>
-            <ul>
-             <li><a href="index.html">Home</a></li>
-             <li><a href="great_games.html">Great Games</a></li>
-             <li><a href="slideshow.html">Game Pictures</a></li>
-           </ul>
-        </nav>
+<body>
+    <h1>Our Menu</h1>
+    <div class="grid_container">
 
-        <h1>Hobby Board Gaming!</h1>
-    </header>
+        <section>
+            <div class="absoulte_chicken">Chicken</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </section>
+        <section>
+            <div class="absoulte_beef">Beef</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </section>
+        <section class="spaner">
+            <div class="absoulte_sushi">Sushi</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </section>
+    </div>
     
-    <main id="main_content">
-        <article>
-            <h2>What is a Hobby Board Game?</h2>
-            <p>"All of us who are enthusiastic about modern boardgames want to describe in an inspiring way to the unfamiliar what a modern boardgame is. And with limited time this task can be hard: To understand what they already know, to find out what we think they might like in boardgame so we can focus on that, to describe the the width, breadth and depth of the hobby, what to relate it to, what it's not or simply give the mysterious "Come and see"-answer. There should be as many ways to do this as there are human beings, I suppose". Quote from Fridtjof on <a href="https://boardgamegeek.com/geeklist/228617/explaining-what-modern-boardgame" target="_blank">BoardGameGeek.com</a>.</p>
-            <a id="myAnchor" href="https://boardgamegeek.com/boardgame/342942/ark-nova" target="_blank"><img src="images/ark_nova.jpg" alt="Ark Nova Board Game"></a>
-        </article>
-
-         </main>
-        </div>
-    <footer>
-        <h2>Learn more about board games and buy them!</h2>
-        <ul>
-            <li><a href="https://boardgamegeek.com" target="_blank">Boardgame Geek</a></li>
-            <li><a href="https://www.youtube.com/@thedicetower" target="_blank">The Dice Tower YouTube Channel</a></li>
-            <li><a href="https://www.gamenerdz.com" target="_blank"> GameNerdz Board Game Store</a></li>
-        </ul>   
-    </footer>
 </body>
 </html>
-
