--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -43,7 +43,7 @@
 
   </header>
 
-  <div id="main-content" class="container">
+  <div id="main-content" class="container col-xs-12">
     <h2 id="menu" class="text-center">Our Menu</h2>
     <div class="menu-info">
     <section id="menu" class="text-center big">Chicken</section><br>
